hphp/test/slow/const_array_assign.php.expectf
Fatal error: Array-like class consts are not valid lvalues in %s/test/slow/const_array_assign.php on line 7